--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Meta tags for search engines -->
-    <meta name="description" content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park">
+    <meta name="description"
+        content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park">
     <meta name="keywords" content="love running, love, running club, runners, Ireland, Dublin, sport, exercise">
-    
+
     <!-- Title -->
     <title>Love Running</title>
 
@@ -27,7 +28,7 @@
             <h1 id="logo">Love Running</h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
-        <label for="nav-toggle" class="nav-toggle-label" >X</label>
+        <label for="nav-toggle" class="nav-toggle-label">X</label>
         <nav>
             <ul id="menu">
                 <li><a href="" class="active">Home</a></li>
@@ -41,7 +42,18 @@
     <main>Main Content</main>
 
     <!-- Footer -->
-    <footer>Footer</footer>
+    <footer>
+        <ul>
+            <li><a href="https://facebook.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+                    </li>
+            <li></li>
+            <li></li>
+            <li></li>
+        </ul>
+    </footer>
+    <!-- Font Awesome kit -->
+    <script src="https://kit.fontawesome.com/9ccb4f96a7.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
