--- a/index.html
+++ b/index.html
@@ -45,22 +45,26 @@
 
     <!-- Footer -->
     <footer>
-        <ul>
-            <li><a href="https://facebook.com/" target="_blank" rel="noopener"
+        <ul id="social-networks">
+            <li>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener"
                     aria-label="Visit our Facebook page (opens in a new tab)">
                     <i class="fa-brands fa-facebook"></i></a>
             </li>
-            <li><a href="https://twitter.com/" target="_blank" rel="noopener"
+            <li>
+                <a href="https://www.twitter.com/" target="_blank" rel="noopener"
                     aria-label="Visit our Twitter page (opens in a new tab)">
-                    <iclass="fa-brands fa-square-twitter"></i></a>
+                    <i class="fa-brands fa-twitter-square"></i></a>
             </li>
-            <li><a href="https://youtube.com/" target="_blank" rel="noopener"
-                    aria-label="Visit our Youtube page (opens in a new tab)">
-                    <iclass="fa-brands fa-square-youtube"></i></a>
+            <li>
+                <a href="https://www.youtube.com/" target="_blank" rel="noopener"
+                    aria-label="Visit our YouTube page (opens in a new tab)">
+                    <i class="fa-brands fa-youtube-square"></i></a>
             </li>
-            <li><a href="https://instagram.com/" target="_blank" rel="noopener"
+            <li>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener"
                     aria-label="Visit our Instagram page (opens in a new tab)">
-                    <iclass="fa-brands fa-instagram"></i></a>
+                    <i class="fa-brands fa-instagram"></i></a>
             </li>
         </ul>
     </footer>
