--- a/signup.html
+++ b/signup.html
@@ -8,11 +8,9 @@
     <!-- Meta tags for search engines -->
     <meta name="description"
         content="Love Running. Club for runners in Dublin, Ireland. Urban running, trail running. Dublin docklands and Phoenix Park">
-    <meta name="keywords" content="love running, love, running club, runners, Ireland, Dublin, sport, exercise">
-
+    <meta name="keywords" content="love running, run, running club, runners, Ireland, Dublin, sport, exercise">
     <!-- Title -->
     <title>Love Running</title>
-
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
@@ -40,7 +38,7 @@
         </nav>
     </header>
 
-    <!-- Main Content -->
+    <!-- Main content -->
     <main>
         <section id="signup">
             <form id="signup-form" method="POST" action="https://formdump.codeinstitute.net">
@@ -100,7 +98,7 @@
     </footer>
 
     <!-- Font Awesome kit -->
-    <script src="https://kit.fontawesome.com/9ccb4f96a7.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/3b20d96fa9.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
